Add URIs and update gems

--- a/metanorma.env
+++ b/metanorma.env
@@ -1,4 +1,4 @@
 METANORMA_DOCTYPE=ogc
-METANORMA_FORMATS=xml html doc
+METANORMA_FORMATS=xml html doc pdf
 ENCRYPTION_LABEL=9dd0b5f6a481
 COMMIT_AUTHOR_EMAIL=travis-ci@ribose.com
