--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ rvm:
 before_install:
 - gem install bundler -v 2.0.1
 - bundle update
+- nvm install 8
+- npm install -g puppeteer
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo bash -c "apt-get update && curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | bash" ; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install --HEAD https://raw.githubusercontent.com/metanorma/homebrew-metanorma/master/Formula/metanorma.rb ; fi
 script:
