--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,13 @@
 version: '{build}'
 
+cache:
+  - vendor/bundle
+
 environment:
   matrix:
     - RUBY_VERSION: 25
     - RUBY_VERSION: 24
+    - RUBY_VERSION: 23
     - RUBY_VERSION: _trunk
 
 matrix:
@@ -16,6 +20,7 @@ install:
 
 build_script:
   - set PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
+  - bundle config --local path vendor/bundle
   - bundle update
   - bundle install
 
@@ -27,4 +32,3 @@ before_test:
 test_script:
   - plantuml -testdot
   - make -f Makefile.win clean all publish SHELL=cmd
-
