--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,12 @@ addons:
   snaps:
     - jq
     - yq
+    - name: node
+      confinement: classic # or devmode
+      channel: channel=10/stable
 before_install:
   - gem update --system
   - gem install bundler
-  - nvm install 8
   - npm install -g puppeteer
   - sudo bash -c "curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | bash"
 script:
