--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
     - yq
     - name: node
       confinement: classic # or devmode
-      channel: channel=10/stable
+      channel: 10/stable
 before_install:
   - gem update --system
   - gem install bundler
