--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,23 @@
+# Auto-generated !!! Do not edit it manually
+# use ci-master https://github.com/metanorma/metanorma-build-scripts
 language: ruby
 dist: xenial
 env:
   global:
-    - COMMIT_AUTHOR_EMAIL="$(yq r metanorma.yml metanorma.deploy.email)";
+    - JAVA_OPTS="java.awt.headless=true"
+    - COMMIT_AUTHOR_EMAIL="$(yq r metanorma.yml metanorma.deploy.email)"
 rvm:
   - 2.5
 cache: bundler
 addons:
-  apt:
-    update: true
   snaps:
     - jq
     - yq
-    - name: node
-      confinement: classic # or devmode
-      channel: 10/stable
 before_install:
   - gem update --system
   - gem install bundler
-  - npm install -g puppeteer
   - sudo bash -c "curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | bash"
+  - nvm use mn-node 
 script:
   - make clean all publish
 deploy:
