--- a/Makefile.win
+++ b/Makefile.win
@@ -1,5 +1,10 @@
 #!make
 
+# Ensure the xml2rfc cache directory exists locally
+IGNORE := $(shell mkdir -p $(HOME)/.cache/xml2rfc)
+
+SRC := ogc-tcpnp.adoc
+
 FORMAT_MARKER := mn-output-
 FORMATS := $(shell grep "$(FORMAT_MARKER)" *.adoc | cut -f 2 -d ' ' | tr ',' '\n' | sort | uniq | tr '\n' ' ')
 
