--- a/Makefile.win
+++ b/Makefile.win
@@ -3,10 +3,15 @@
 # Ensure the xml2rfc cache directory exists locally
 IGNORE := $(shell md $(USERPROFILE)\.cache\xml2rfc)
 
-SRC := ogc-tcpnp.adoc
+SRC := $(shell yq r metanorma.yml metanorma.source.files | cut -c 3-999)
+ifeq ($(SRC),ll)
+SRC := $(filter-out README.adoc, $(wildcard sources\*.adoc))
+endif
 
 FORMAT_MARKER := mn-output-
-FORMATS := $(shell grep "$(FORMAT_MARKER)" *.adoc | cut -f 2 -d " " | tr ',' '\n' | sort | uniq | tr '\n' ' ')
+FORMATS := $(shell grep "$(FORMAT_MARKER)" $(SRC) | cut -f 2 -d ' ' | tr ',' '\n' | sort | uniq | tr '\n' ' ')
+
+XML  := $(patsubst sources/%,documents/%,$(patsubst %.adoc,%.xml,$(SRC)))
 
 SRC  := $(filter-out README.adoc, $(wildcard *.adoc))
 XML  := $(patsubst %.adoc,%.xml,$(SRC))
@@ -30,20 +35,13 @@ endif
 _OUT_FILES := $(foreach FORMAT,$(FORMATS),$(shell echo $(FORMAT) | tr '[:lower:]' '[:upper:]'))
 OUT_FILES  := $(foreach F,$(_OUT_FILES),$($F))
 
-all: $(OUT_FILES)
+all: documents.html
+
+documents:
+	mkdir $@
 
 %.xml %.html %.doc %.pdf:	%.adoc | bundle
 	${COMPILE_CMD}
-
-images: $(PNG)
-
-images/%.png: models/%.wsd
-	plantuml -tpng -o ../images/ $<
-
-xmi: $(XMI)
-
-xmi/%.xmi: models/%.wsd
-	plantuml -xmi:star -o ../xmi/ $<
 
 define FORMAT_TASKS
 OUT_FILES-$(FORMAT) := $($(shell echo $(FORMAT) | tr '[:lower:]' '[:upper:]'))
