--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -2,7 +2,11 @@
 # use ci-master https://github.com/metanorma/metanorma-build-scripts
 name: ubuntu
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ '**' ]
 
 jobs:
   test-linux:
@@ -20,12 +24,13 @@ jobs:
           architecture: 'x64'
       - name: Update gems
         run: |
-          gem install bundler -v "~> 2"
+          gem install bundler
           bundle install --jobs 4 --retry 3
       - name: Use Metanorma
         run: |
-          sudo bash -c "curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | bash"
+          curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | sudo bash
           sudo apt-get install -y libxml2-dev libxslt1-dev libicu-dev zlib1g-dev
+          sudo chown -R $USER:$(id -gn $USER) $HOME/.config
       - name: Install yq
         run: |
           sudo snap install yq
@@ -34,8 +39,6 @@ jobs:
           JAVA_OPTS: "java.awt.headless=true"
         run: |
           export COMMIT_AUTHOR_EMAIL="$(yq r metanorma.yml metanorma.deploy.email)"
+          source $HOME/.nvm/nvm.sh
+          nvm use mn-node
           make clean all publish
-      - name: Deploy
-        if: github.ref == 'refs/heads/master'
-        run: |
-          bash -c "curl -L https://raw.githubusercontent.com/metanorma/metanorma-build-scripts/master/deploy-to-gh-pages.sh | bash"
