--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -2,7 +2,11 @@
 # use ci-master https://github.com/metanorma/metanorma-build-scripts
 name: windows
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ '**' ]
 
 jobs:
   test-windows:
@@ -21,13 +25,18 @@ jobs:
       - name: Update gems
         shell: pwsh
         run: |
-          gem install bundler -v "~> 2"
+          gem install bundler
           bundle config --local path vendor/bundle
+          bundle update
           bundle install --jobs 4 --retry 3
+      - name: Use Metanorma
+        shell: pwsh
+        run: |
+          cinst -y metanorma
       - name: Install yq
         shell: pwsh
         run: |
           Invoke-WebRequest -Uri "https://github.com/mikefarah/yq/releases/download/2.4.0/yq_windows_amd64.exe " -OutFile ".\yq.exe"
       - name: Metanorma compile
         run: |
-          make -f Makefile.win clean all publish SHELL=cmd
+          make -f Makefile.win clean all SHELL=cmd
