--- a/Makefile.win
+++ b/Makefile.win
@@ -3,28 +3,27 @@
 # Ensure the xml2rfc cache directory exists locally
 IGNORE := $(shell md $(USERPROFILE)\.cache\xml2rfc)
 
-SRC := $(shell yq r metanorma.yml metanorma.source.files | cut -c 3-999)
+SRC := $(subst /,\\,$(shell yq r metanorma.yml metanorma.source.files | cut -c 3-999))
 ifeq ($(SRC),ll)
 SRC := $(filter-out README.adoc, $(wildcard sources\*.adoc))
 endif
 
 FORMAT_MARKER := mn-output-
-FORMATS := $(shell grep "$(FORMAT_MARKER)" $(SRC) | cut -f 2 -d ' ' | tr ',' '\n' | sort | uniq | tr '\n' ' ')
+FORMATS := $(shell grep "$(FORMAT_MARKER)" $(SRC) | cut -f 2 -d " " | tr "," "\\n" | sort | uniq | tr "\\n" " ")
 
-XML  := $(patsubst sources/%,documents/%,$(patsubst %.adoc,%.xml,$(SRC)))
+XML  := $(patsubst sources\%,documents\%,$(patsubst %.adoc,%.xml,$(SRC)))
+XMLRFC3  := $(patsubst %.xml,%.v3.xml,$(OUTPUT_XML))
+HTML := $(patsubst %.xml,%.html,$(OUTPUT_XML))
+DOC  := $(patsubst %.xml,%.doc,$(OUTPUT_XML))
+PDF  := $(patsubst %.xml,%.pdf,$(OUTPUT_XML))
+TXT  := $(patsubst %.xml,%.txt,$(OUTPUT_XML))
+NITS := $(patsubst %.adoc,%.nits,$(wildcard sources/draft-*.adoc))
+WSD  := $(wildcard sources\models\*.wsd)
+XMI	 := $(patsubst sources\models\%,sources\xmi\%,$(patsubst %.wsd,%.xmi,$(WSD)))
+PNG	 := $(patsubst sources\models\%,sources\images\%,$(patsubst %.wsd,%.png,$(WSD)))
 
-SRC  := $(filter-out README.adoc, $(wildcard *.adoc))
-XML  := $(patsubst %.adoc,%.xml,$(SRC))
-HTML := $(patsubst %.adoc,%.html,$(SRC))
-DOC  := $(patsubst %.adoc,%.doc,$(SRC))
-PDF  := $(patsubst %.adoc,%.pdf,$(SRC))
-WSD  := $(wildcard models/*.wsd)
-XMI	 := $(patsubst models/%,xmi/%,$(patsubst %.wsd,%.xmi,$(WSD)))
-PNG	 := $(patsubst models/%,images/%,$(patsubst %.wsd,%.png,$(WSD)))
-
-HOST_SHARE_DIR=$(USERPROFILE)\$(shell for %%I in (.) do echo %%~nxI)
-COMPILE_CMD_LOCAL := bundle exec metanorma $(SRC)
-COMPILE_CMD_DOCKER := docker run --rm -it -v $(CURDIR):/metanorma/ ribose/metanorma "metanorma $(SRC)"
+COMPILE_CMD_LOCAL := bundle exec metanorma
+COMPILE_CMD_DOCKER := docker run -v "$$(pwd)":/metanorma/ ribose/metanorma metanorma
 
 ifdef METANORMA_DOCKER
   COMPILE_CMD := echo "Compiling via docker..." & $(COMPILE_CMD_DOCKER)
@@ -35,13 +34,20 @@ endif
 _OUT_FILES := $(foreach FORMAT,$(FORMATS),$(shell echo $(FORMAT) | tr '[:lower:]' '[:upper:]'))
 OUT_FILES  := $(foreach F,$(_OUT_FILES),$($F))
 
-all: documents.html
+all: $(OUT_FILES)
 
-documents:
-	mkdir $@
+%.v3.xml %.xml %.html %.doc %.pdf %.txt:	%.adoc | bundle
+	${COMPILE_CMD} $^
 
-%.xml %.html %.doc %.pdf:	%.adoc | bundle
-	${COMPILE_CMD}
+images: $(PNG)
+
+images\%.png: models\%.wsd
+	plantuml -tpng -o ..\images\ $<
+
+xmi: $(XMI)
+
+xmi\%.xmi: models\%.wsd
+	plantuml -xmi:star -o ..\xmi\ $<
 
 define FORMAT_TASKS
 OUT_FILES-$(FORMAT) := $($(shell echo $(FORMAT) | tr '[:lower:]' '[:upper:]'))
@@ -69,51 +75,3 @@ bundle:
 	IF "" == "${METANORMA_DOCKER}" bundle
 
 .PHONY: bundle all open clean
-
-#
-# Watch-related jobs
-#
-
-.PHONY: watch serve watch-serve
-
-NODE_BINS          := onchange live-serve run-p
-NODE_BIN_DIR       := node_modules/.bin
-NODE_PACKAGE_PATHS := $(foreach PACKAGE_NAME,$(NODE_BINS),$(NODE_BIN_DIR)/$(PACKAGE_NAME))
-
-$(NODE_PACKAGE_PATHS): package.json
-	npm i
-
-watch: $(NODE_BIN_DIR)/onchange
-	make all
-	$< $(ALL_SRC) -- make all
-
-define WATCH_TASKS
-watch-$(FORMAT): $(NODE_BIN_DIR)/onchange
-	make $(FORMAT)
-	$$< $$(SRC_$(FORMAT)) -- make $(FORMAT)
-
-.PHONY: watch-$(FORMAT)
-endef
-
-$(foreach FORMAT,$(FORMATS),$(eval $(WATCH_TASKS)))
-
-serve: $(NODE_BIN_DIR)/live-server revealjs-css reveal.js images
-	set PORT=$${PORT:-8123} & \
-	set port=$${PORT} & \
-	for /r %%html in $(HTML) do ( \
-		$< --entry-file=%%html --port=%port% --ignore="*.html,*.xml,Makefile,Gemfile.*,package.*.json" --wait=1000 & \
-		set /A port=%port%+1 \
-	)
-
-watch-serve: $(NODE_BIN_DIR)/run-p
-	$< watch serve
-
-#
-# Deploy jobs
-#
-
-publish:
-	mkdir -p published
-	xcopy $(basename $(SRC)).* published
-	copy $(firstword $(HTML)) published\index.html
-	IF EXIST "images" xcopy /E images published
