--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,30 +7,27 @@ on:
     branches: [ master ]
   pull_request:
     paths-ignore:
+      - .github/workflows/test.yml
       - .github/workflows/macos.yml
       - .github/workflows/ubuntu.yml
       - .github/workflows/windows.yml
+      - Makefile.win
+  repository_dispatch:
+    types: [ metanorma/metanorma-docker ]
 
 jobs:
   test-docker:
     runs-on: ubuntu-latest
     container: docker://metanorma/mn
     steps:
-      - uses: actions/checkout@master
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.METANORMA_CI_PAT_TOKEN }}
+          submodules: true
       - name: Setup fonts
         run: |
-          # We need to do this to install mscorefonts
-          apt-add-repository -y contrib
-          apt-get update
-          echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections
-          apt-get install -y ttf-mscorefonts-installer
-          curl -Ls https://raw.githubusercontent.com/metanorma/vista-fonts-installer/master/vista-fonts-installer.sh | bash
+          metanorma setup --agree-to-terms
       - uses: actions/setup-go@v2-beta
         with:
           go-version: '^1.13.1'
@@ -40,9 +37,7 @@ jobs:
           ln -s $GOPATH/bin/yq /usr/local/bin/yq
       - name: Instal gems from local Gemfile
         run: |
-          for gem in $(grep '^gem ' Gemfile | cut -c5- | tr -d '"'); do
-            bundle add $gem
-          done
+          curl -L --retry 3 https://raw.githubusercontent.com/metanorma/metanorma-build-scripts/master/gemfile-to-bundle-add.sh | bash
       - name: Build document in the Metanorma container
         env:
           LC_ALL: C.UTF-8
