--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -7,9 +7,11 @@ on:
     branches: [ master ]
   pull_request:
     paths-ignore:
+      - .github/workflows/test.yml
       - .github/workflows/docker.yml
       - .github/workflows/ubuntu.yml
       - .github/workflows/windows.yml
+      - Makefile.win
 
 jobs:
   test-macos:
@@ -38,10 +40,7 @@ jobs:
           metanorma version
       - name: Setup Fonts
         run: |
-          brew install cabextract gettext
-          brew link --force gettext
-          export RENAME_FONTS=false
-          curl -Ls https://raw.githubusercontent.com/metanorma/vista-fonts-installer/master/vista-fonts-installer.sh | bash
+          metanorma setup --agree-to-terms
       - name: Install bundler
         run: |
           sudo gem install bundler
@@ -49,6 +48,5 @@ jobs:
         env:
           JAVA_OPTS: "java.awt.headless=true"
         run: |
-          export NODE_PATH=$(brew --prefix metanorma)/libexec/lib/node_modules
           source $(brew --prefix metanorma)/libexec/venv/bin/activate
           make clean all
