--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -18,13 +18,11 @@ jobs:
     name: Test on macOS
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.METANORMA_CI_PAT_TOKEN || github.token }}
+          submodules: true
       - name: Cache xml2rfc
         id: cache-xml2rfc
         uses: actions/cache@v1
@@ -34,9 +32,7 @@ jobs:
           restore-key: xml2rfc
       - name: Use Metanorma
         run: |
-          brew update
-          brew install yq
-          brew install https://raw.githubusercontent.com/metanorma/homebrew-metanorma/master/Formula/metanorma.rb
+          brew install yq metanorma/metanorma/metanorma
           metanorma version
       - name: Setup Fonts
         run: |
